--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "gh-pages": "^4.0.0",
     "pinia": "^2.0.23",
+    "pinia-plugin-persistedstate": "^3.0.1",
     "vue": "^3.2.41"
   },
   "devDependencies": {
